--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<div class = box red>
+<div class = "box red">
 
 <h1> This is Git tutorial. Do practice </h1>
 <p> more coding into the picture </p>
