new branch changes

--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,12 @@
 <p> more coding into the picture </p>
 </div>
 
+<div class = "box blue">
+
+<h1> This is different branch </h1>
+<p> more coding into the picture </p>
+</div>
+
 </body>
 
 </html>
